<resources>
    <string name="app_name">Pay</string>

    <!-- Pay Fragment -->
    <string name="pay_frag_cancel">Cancel</string>
    <string name="pay_frag_scan_qr_code">or Scan QR Code</string>

    <!-- Pay Card -->
    <string name="pay_card_student">Student</string>
    <string name="pay_card_current_sva_balance">Current SVA Balance</string>
    <string name="slide_up_to_pay">Slide up to pay</string>

    <!-- Bottom Nav View -->
    <string name="menu_nav_home">Home</string>
    <string name="menu_nav_student_id">Student ID</string>
    <string name="menu_nav_pay">Pay</string>
    <string name="menu_nav_ellipses">More</string>

    <!-- Authorize Sheet -->
    <string name="authorize_sheet_authorize">Authorize</string>
    <string name="authorize_sheet_cancel">Cancel</string>
    <string name="authorize_sheet_balance">New Campus Cash Balance</string>
    <string name="authorize_sheet_pay_amount">Payment Amount</string>
    <string name="authorize_sheet_success">Success!</string>

    <!-- Permissions -->
    <string name="qr_code_rationale_message">The app needs permission to use your camera to read QR codes.</string>

</resources>
