<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="220dp"
    android:layout_height="348dp"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:backgroundTint="#F5F6F7"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/custom_client_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/card_logo_padding"
            android:layout_marginLeft="@dimen/card_logo_padding"
            android:layout_marginRight="@dimen/card_logo_padding"
            android:src="@drawable/ridgeview_transparent"
            />

        <RelativeLayout
            android:id="@+id/pic"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/custom_client_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp">

            <ImageView
                android:id="@+id/person_pic_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/person_pic_background" />
            <ImageView
                android:id="@+id/person_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/pay_pic" />
        </RelativeLayout>

        <com.marc.nelnet.nelnetpayexperience.customviews.DetailsLabelView
            android:id="@+id/student_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pic"
            android:paddingTop="23dp"
            android:paddingLeft="14dp"
            android:paddingStart="14dp"
            app:detailsSecondaryText="@string/pay_card_student"/>

        <com.marc.nelnet.nelnetpayexperience.customviews.DetailsLabelView
            android:id="@+id/balance_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/student_details"
            android:paddingTop="20dp"
            android:paddingLeft="14dp"
            android:paddingStart="14dp"
            app:detailsSecondaryText="@string/pay_card_current_sva_balance"/>

        <ImageView
            android:id="@+id/slide_up_arrow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/balance_details"
            android:maxHeight="15dp"
            android:maxWidth="15dp"
            android:layout_margin="1dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_slide_up"
            />

        <TextView
            android:id="@+id/slide_up_text"
            style="@style/SecondaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/slide_up_to_pay"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>


